fix logog alignments

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -123,5 +123,8 @@
   #ftr-logo {
     width: 100%;
     flex-grow: 3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
